Using native JSON parser interface and not compatibility API

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,29 @@
 .project
 .gradle
 .settings
+.idea
+
+
+.idea/libraries/Gradle__boon_0_14.xml
+
+.idea/libraries/Gradle__commons_math3_3_2.xml
+
+.idea/libraries/Gradle__groovy_all_2_2_2.xml
+
+.idea/libraries/Gradle__gson_2_2_4.xml
+
+.idea/libraries/Gradle__jackson_annotations_2_3_0.xml
+
+.idea/libraries/Gradle__jackson_core_2_3_3.xml
+
+.idea/libraries/Gradle__jackson_databind_2_3_3.xml
+
+.idea/libraries/Gradle__jmh_core_0_5_6.xml
+
+.idea/libraries/Gradle__jmh_generator_annprocess_0_5_6.xml
+
+.idea/libraries/Gradle__jopt_simple_4_6.xml
+
+build.gradle~
+
+json-benchmarks.iml
