--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildDir = 'target'
 sourceCompatibility = '1.7'
 targetCompatibility = '1.7'
 
-ext.groovyVersion = System.properties.getProperty('groovyVersion', '2.2.2') // 2.2.2 by default
+ext.groovyVersion = System.properties.getProperty('groovyVersion', '2.3.0-rc-2') // by default
 println "Groovy version: ${groovyVersion}" 
 
 dependencies {
